# varan

./: .travis.yml  README.md  deltasnp.cabal  varan.cabal
scripts/: gensnps.sh
src/: AgrestiCoull.hs  Count.hs  ESIV.hs  MPileup.hs  Main.hs  Metrics.hs  Mpile2SF.hs  Options.hs  ParMap.hs  Process.hs  RandomSelect.hs  Sparks.hs  VExtr.hs  Varan.hs  Variants.hs
test/: test.sh
