Name:          deltasnp
Version:       0.1
License:       GPL
Cabal-Version: >= 1.6
Build-Type:    Simple
Category:      Bioinformatics
Author:        Ketil Malde
Maintainer:    Ketil Malde <ketil@malde.org>
Synopsis:      Process mpileup output to identify significant differences
Description:   Using Agresti-Coull estimation of confidence interval, report
	       variant positions found in pooled samples along with significance of
	       the variant having different underlying allele frequency ('+' for 95%, 
	       '*' for 99%).

-- Using IO arrays (baseline)
Executable deltasnp
    Hs-Source-Dirs:  src
    Main-Is:         Main.hs
    Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants
    Build-Depends:   base >= 4 && < 5, random, mtl, parallel
    Ghc-Options:     -rtsopts -Wall

