Name:          varan
Version:       0.2
License:       GPL
Cabal-Version: >= 1.6
Build-Type:    Simple
Category:      Bioinformatics
Author:        Ketil Malde
Maintainer:    Ketil Malde <ketil@malde.org>
Synopsis:      Process mpileup output to identify significant differences
Description:   Using Agresti-Coull estimation of confidence interval, report
	       variant positions found in pooled samples along with significance of
	       the variant having different underlying allele frequency ('+' for 95%, 
	       '*' for 99%).

Executable varan
    Hs-Source-Dirs:  src
    Main-Is:         Main.hs
    Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants, Metrics
    Build-Depends:   base >= 4 && < 5, random, mtl, parallel
    Ghc-Options:     -rtsopts -Wall 

-- For parallel execution, we might want to add these, but they
-- seem to degrade performance on older GHC
-- Ghc-Options: -threaded -with-rtsopts=-N

